# CubeDetect

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cubedetect/: .gitignore  CMakeLists.txt
cubedetect/include/: cubedetect.hpp
cubedetect/src/: cubedetect.cpp
